try out css sytlesheet

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-this is my first sentence with right commit email adress
+<!DOCTYPE html>
+<html>
+<head>
+
+<link rel="stylesheet" type="text/css" href="style_this.css">
+
+<title>Sebastian Humberg</title>
+</head>
+<body>
+
+
+<p>This is a paragraph.</p>
+
+
+I work 
+
+<a href= "www.zeit.de" >
+here.
+</a> 
+
+
+<center>
+    <p>First attempt of styling</p>
+</center>
+
+</body>
+</html>
