try out css sytlesheet; correct name

--- a/index.html
+++ b/index.html
@@ -8,19 +8,10 @@
 </head>
 <body>
 
-
-<p>This is a paragraph.</p>
-
-
-I work 
-
-<a href= "www.zeit.de" >
-here.
-</a> 
-
-
 <center>
-    <p>First attempt of styling</p>
+    <p href= "https://www.zeit.de">
+    First attempt of styling
+	</p>
 </center>
 
 </body>
