add picture and icon

--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
 <head>
 
 <link rel="stylesheet" type="text/css" href="style_this.css">
+<link rel="icon" href="http://example.com/favicon.png">
 
 <title>Sebastian Humberg</title>
 </head>
 <body>
 
 <center>
+
+	 <img src="Sebastian_Humberg.png" alt="Avatar"> 
+
     <p href= "https://www.zeit.de">
     First attempt of styling
 	</p>
+
+
 </center>
 
 </body>
