--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <center>
 
-	 <img src="Sebastian_Humberg.png" alt="Avatar"> 
+	 <img src="Sebastian_Humberg.jpg" alt="Avatar"> 
 
     <p href= "https://www.zeit.de">
     First attempt of styling
