--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<link rel="stylesheet" type="text/css" href="style_this.css">
-<link rel="icon" href="http://example.com/favicon.png">
-
-<title>Sebastian Humberg</title>
+	<link rel="stylesheet" type="text/css" href="style_this.css">
+	<link rel="icon" href="http://example.com/favicon.png">
+	<title>Sebastian Humberg</title>
 </head>
+	
+
 <body>
-
-<center>
-
-	 <img src="Sebastian_Humberg.jpg" alt="Avatar"> 
-
-    <p href= "https://www.zeit.de">
-    First attempt of styling
-	</p>
-
-
-</center>
-
+	<div class="container">
+		<header>
+			<h1>Test</h1>
+		</header>
+		<main>
+			<img src="Sebastian_Humberg.jpg" alt="Avatar" class="responsive"> 
+			<p>
+				ich arbeite bei <a href="https://www.zeit.de/index" target="_blank" rel="noopener nofollow">ZEIT ONLINE</a>
+			</p>
+		</main>
+	</div>
 </body>
+	
+
 </html>
