--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 
 <body>
 	<div class="container">
-		<header>
-			<img src="Sebastian_Humberg.jpg" alt="Avatar" class="responsive"> 
-		</header>
+		<img src="Sebastian_Humberg.jpg" alt="Avatar" class="responsive"> 
 		<main>
 			<p>
 				ich arbeite bei <a href="https://www.zeit.de/index" target="_blank" rel="noopener nofollow">ZEIT ONLINE</a>
 			</p>
 		</main>
 	</div>
+	
+	<p>
+		ich arbeite bei <a href="https://www.zeit.de/index" target="_blank" rel="noopener nofollow">ZEIT ONLINE</a>
+	</p>
 </body>
 	
 
