--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 	</div>
 	
 	<p>
-				hello, i am SEBASTIAN HUMBERG and this is my personal website
-				i have studied mathematics, econometrics and statistics
-				i have lived in krefeld, brisbane, aachen, wuhan, ijsselmeer, kiel, berlin and now hamburg
-				i have worked for <a href="https://www.meteolytix.de" target="_blank" rel="noopener nofollow">meteolytix</a> and now <a href="https://www.zeit.de/index" target="_blank" rel="noopener nofollow">zeit online</a>
-				i work with data
-				for more information click on an icon you recognize and know what to do
+				hello, i am SEBASTIAN HUMBERG and this is my personal website \n
+				i have studied mathematics, econometrics and statistics \n
+				i have lived in krefeld, brisbane, aachen, wuhan, ijsselmeer, kiel, berlin and now hamburg \n
+				i have worked for <a href="https://www.meteolytix.de" target="_blank" rel="noopener nofollow">meteolytix</a> and now <a href="https://www.zeit.de/index" target="_blank" rel="noopener nofollow">zeit online</a> \n
+				i work with data \n
+				for more information click on an icon you recognize and know what to do \n
 	</p>
 </body>
 	
