--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	<p>
 				hello, i am SEBASTIAN HUMBERG and this is my personal website <br>
 				i have studied mathematics, econometrics and statistics <br>
-				i have lived in krefeld, brisbane, aachen, wuhan, ijsselmeer, kiel, berlin and now hamburg <br>
-				i have worked for <a href="https://www.meteolytix.de" target="_blank" rel="noopener nofollow">meteolytix</a> and now <a href="https://www.zeit.de/index" target="_blank" rel="noopener nofollow">zeit online</a> <br>
+				i have lived in krefeld, brisbane, aachen, wuhan, ijsselmeer, kiel, berlin and currently in hamburg <br>
+				i have worked for <a href="https://www.meteolytix.de" target="_blank" rel="noopener nofollow">meteolytix</a> and currently at <a href="https://www.zeit.de/index" target="_blank" rel="noopener nofollow">zeit online</a> <br>
 				i work with data <br>
-				for more information click on an icon you recognize and know what to do <br>
+				for more information click on an icon you recognize <br>
 	</p>
 </body>
 	
