--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="style_this.css">
 	<link rel="icon" href="http://example.com/favicon.png">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> 
 	<title>Sebastian Humberg</title>
 </head>
 	
@@ -10,18 +11,20 @@
 <body>
 	<div class="container">
 		<img src="Sebastian_Humberg.jpg" alt="Avatar" class="responsive"> 
-		
-		
 	</div>
 	
 	<p>
 		hello, i am SEBASTIAN HUMBERG and this is my personal website.
-		i have studied mathematics, econometrics and statistics.
-		i have lived in krefeld, brisbane, aachen, wuhan, ijsselmeer, kiel, berlin and currently in hamburg.
-		i have worked for <a href="https://www.meteolytix.de" target="_blank" rel="noopener nofollow">meteolytix</a> and currently at <a href="https://www.zeit.de/index" target="_blank" rel="noopener nofollow">zeit online</a>.
+		i studied mathematics, econometrics and statistics.
+		i lived in krefeld, brisbane, aachen, wuhan, ijsselmeer, kiel, berlin and am currently in hamburg.
+		i worked for this <a href="https://www.stat-econ.uni-kiel.de/de" target="_blank" rel="noopener nofollow">institute</a>, the predictive analytics company <a href="https://www.meteolytix.de" target="_blank" rel="noopener nofollow">meteolytix</a> and am currently employed at <a href="https://www.zeit.de/index" target="_blank" rel="noopener nofollow">zeit online</a>.
 		i work with data.
 		for more information click on an icon you recognize.
 	</p>
+	
+	<div class="container">
+		<i class="fa fa-linkedin fa-5x"></i>
+	</div>
 </body>
 	
 
