--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 	</p>
 	
 	<div class="container">
-		<i class="fa fa-linkedin fa-5x"></i>
+		<i class="fa fa-linkedin"></i>
+		<i class="icon-linkedin"></i>
+		<i class="icon-xing-sign"></i>
+		<i class="icon-github"></i>
 	</div>
 </body>
 	
