--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
 		<i class="icon-xing-sign"></i>
 		<i class="icon-github"></i>
 	</div>
+	
+	 <div class="row">
+  		<div class="column">
+    			<i class="fa fa-linkedin"></i>
+ 		 </div>
+ 		 <div class="column">
+    			<i class="icon-linkedin"></i>
+  		</div>
+ 		 <div class="column">
+    			<i class="icon-xing-sign"></i>
+  		</div>
+	</div> 
+	
 </body>
 	
 
