--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 	
 	<div class="row">
   		<div class="column">
-    			<i class="fa fa-linkedin"></i>
+  			<i class="fa fa-xing"></i>
  		</div>
  		<div class="column">
-    			<i class="icon-linkedin"></i>
+    			<i class="fa fa-linkedin"></i>
   		</div>
  		<div class="column">
-    			<i class="icon-xing-sign"></i>
+    			<i class="fa fa-xing"></i>
   		</div>
 	</div> 
 	
