--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 	
 	<div class="row">
   		<div class="column">
-  			<i class="fa fa-xing" style="font-size:36px></i>
+  			<i class="fa fa-xing" style="font-size:36px"></i>
  		</div>
  		<div class="column">
-    			<i class="fa fa-linkedin" style="font-size:36px></i>
+    			<i class="fa fa-linkedin" style="font-size:36px"></i>
   		</div>
  		<div class="column">
-    			<i class="fa fa-xing" style="font-size:36px></i>
+    			<i class="fa fa-github" style="font-size:36px"></i>
   		</div>
 	</div> 
 	
