--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
 
 <body>
 	<div class="container">
-		<img src="Sebastian_Humberg.jpg" alt="Avatar" class="responsive"> 
+		<header>
+			<img src="Sebastian_Humberg.jpg" alt="Avatar" class="responsive"> 
+		</header>
+		<main>
+			<p>
+				hello, i am SEBASTIAN HUMBERG and this is my personal website.
+				i studied mathematics, econometrics and statistics.
+				i lived in krefeld, brisbane, aachen, wuhan, ijsselmeer, kiel, berlin and am currently in hamburg.
+				i worked for this <a href="https://www.stat-econ.uni-kiel.de/de" target="_blank" rel="noopener nofollow">institute</a>, the predictive analytics companies <a href="https://www.meteolytix.de" target="_blank" rel="noopener nofollow">meteolytix</a>/<a href="https://www.analytix.de" target="_blank" rel="noopener nofollow">analytix</a> and am currently employed at <a href="https://www.zeit.de/index" target="_blank" rel="noopener nofollow">zeit online</a>.
+				i work with data.
+				for more information click on an icon you recognize.
+			</p>
+		</main>
 	</div>
 	
-	<p>
-		hello, i am SEBASTIAN HUMBERG and this is my personal website.
-		i studied mathematics, econometrics and statistics.
-		i lived in krefeld, brisbane, aachen, wuhan, ijsselmeer, kiel, berlin and am currently in hamburg.
-		i worked for this <a href="https://www.stat-econ.uni-kiel.de/de" target="_blank" rel="noopener nofollow">institute</a>, the predictive analytics companies <a href="https://www.meteolytix.de" target="_blank" rel="noopener nofollow">meteolytix</a>/<a href="https://www.analytix.de" target="_blank" rel="noopener nofollow">analytix</a> and am currently employed at <a href="https://www.zeit.de/index" target="_blank" rel="noopener nofollow">zeit online</a>.
-		i work with data.
-		for more information click on an icon you recognize.
-	</p>
-	
-	<div class="row">
+	<div class="row" style="text-align: center;">
   		<div class="column">
   			<i class="fa fa-xing" style="font-size:36px"></i>
  		</div>
