--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 	
 	<div class="row" style="text-align: center;">
   		<div class="column">
-  			<i class="fa fa-xing" style="font-size:36px"></i>
+  			<i class="fa fa-xing" style="font-size:36px" href="https://www.xing.com/profile/Sebastian_Humberg/cv"></i>
  		</div>
  		<div class="column">
-    			<i class="fa fa-linkedin" style="font-size:36px"></i>
+    			<i class="fa fa-linkedin" style="font-size:36px" href="https://www.linkedin.com/in/shmbrg/"></i>
   		</div>
  		<div class="column">
-    			<i class="fa fa-github" style="font-size:36px"></i>
+    			<i class="fa fa-github" style="font-size:36px" href="https://github.com/shmbrg"></i>
   		</div>
 	</div> 
 	
