--- a/index.html
+++ b/index.html
@@ -25,15 +25,21 @@
 		</main>
 	</div>
 	
-	<div class="row" style="text-align: center;">
+	<div class="row">
   		<div class="column">
-  			<i class="fa fa-xing" style="font-size:36px" href="https://www.xing.com/profile/Sebastian_Humberg/cv"></i>
+			<a href="https://www.xing.com/profile/Sebastian_Humberg/cv">
+  				<i class="fa fa-xing" style="font-size:36px"></i>
+			</a>
  		</div>
  		<div class="column">
-    			<i class="fa fa-linkedin" style="font-size:36px" href="https://www.linkedin.com/in/shmbrg/"></i>
+			<a href="https://www.linkedin.com/in/shmbrg/">
+  				<i class="fa fa-linkedin" style="font-size:36px"></i>
+			</a>
   		</div>
  		<div class="column">
-    			<i class="fa fa-github" style="font-size:36px" href="https://github.com/shmbrg"></i>
+			<a href="https://github.com/shmbrg">
+  				<i class="fa fa-github" style="font-size:36px"></i>
+			</a>
   		</div>
 	</div> 
 	
