--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style_this.css">
-	<link rel="icon" href="http://example.com/favicon.png">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> 
 	<title>Sebastian Humberg</title>
 </head>
@@ -18,7 +17,7 @@
 				hello, i am SEBASTIAN HUMBERG and this is my personal website.
 				i studied mathematics, econometrics and statistics.
 				i lived in krefeld, brisbane, aachen, wuhan, ijsselmeer, kiel, berlin and am currently in hamburg.
-				i worked for this <a href="https://www.stat-econ.uni-kiel.de/de" target="_blank" rel="noopener nofollow">institute</a>, the predictive analytics companies <a href="https://www.meteolytix.de" target="_blank" rel="noopener nofollow">meteolytix</a>/<a href="https://www.analytix.de" target="_blank" rel="noopener nofollow">analytix</a> and am currently employed at <a href="https://www.zeit.de/index" target="_blank" rel="noopener nofollow">zeit online</a>.
+				i worked for this <a href="https://www.stat-econ.uni-kiel.de/de" target="_blank" rel="noopener nofollow">institute</a>, the predictive analytics companies <a href="https://www.meteolytix.de" target="_blank" rel="noopener nofollow">meteolytix</a>/<a href="https://www.analytix.de" target="_blank" rel="noopener nofollow">analytix</a> and am now employed at <a href="https://www.zeit.de/index" target="_blank" rel="noopener nofollow">zeit online</a>.
 				i work with data.
 				for more information click on an icon you recognize.
 			</p>
@@ -27,17 +26,17 @@
 	
 	<div class="row">
   		<div class="column">
-			<a href="https://www.xing.com/profile/Sebastian_Humberg/cv">
+			<a href="https://www.xing.com/profile/Sebastian_Humberg/cv" target="_blank" rel="noopener nofollow">
   				<i class="fa fa-xing" style="font-size:36px"></i>
 			</a>
  		</div>
  		<div class="column">
-			<a href="https://www.linkedin.com/in/shmbrg/">
+			<a href="https://www.linkedin.com/in/shmbrg/" target="_blank" rel="noopener nofollow">
   				<i class="fa fa-linkedin" style="font-size:36px"></i>
 			</a>
   		</div>
  		<div class="column">
-			<a href="https://github.com/shmbrg">
+			<a href="https://github.com/shmbrg" target="_blank" rel="noopener nofollow">
   				<i class="fa fa-github" style="font-size:36px"></i>
 			</a>
   		</div>
