--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="style_this.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> #
-	<link rel="icon" type="image/png" href="Sebastian_Humberg.jpg" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<title>Sebastian Humberg</title>
 </head>
 	
