--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<header>
-			<img src="Sebastian_Humberg.jpg" alt="Avatar" class="responsive"> 
+			<img src="Sebastian_Humberg_comp.jpg" alt="Avatar" class="responsive"> 
 		</header>
 		<main>
 			<p>
