--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
 				hello, <span class="highlightme">i am SEBASTIAN HUMBERG</span> and this is my personal website.
 				i studied mathematics, econometrics and statistics.
 				i lived in krefeld, brisbane, aachen, wuhan, ijsselmeer, kiel, berlin and am currently in hamburg.
-				i worked for this <a href="https://www.stat-econ.uni-kiel.de/de" target="_blank" rel="noopener nofollow">institute</a>, 
-				the predictive analytics companies <a href="https://www.meteolytix.de" target="_blank" rel="noopener nofollow">meteolytix</a>/
-				<a href="https://www.analytix.de" target="_blank" rel="noopener nofollow">analytix</a> and am now employed at 
-				<a href="https://www.zeit.de/index" target="_blank" rel="noopener nofollow">zeit online</a>.
+				i worked for this <a href="https://www.stat-econ.uni-kiel.de/de" target="_blank" rel="noopener nofollow">institute</a>, the predictive analytics companies <a href="https://www.meteolytix.de" target="_blank" rel="noopener nofollow">meteolytix</a>/<a href="https://www.analytix.de" target="_blank" rel="noopener nofollow">analytix</a> and am now employed at <a href="https://www.zeit.de/index" target="_blank" rel="noopener nofollow">zeit online</a>.
 				<span class="highlightme">i work with data.</span>
 				for more information click on an icon you recognize.
 			</p>
