--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     alt="" width="260" height="260" class="avatar avatar-user width-full border color-bg-default"
                     src="https://avatars.githubusercontent.com/u/8846092?v=4"></img></p>
             <h1 class="text-2xl font-bold">Sebastian Humberg</h1>
-            <p class=" text-slate-800 dark:text-slate-200">MLOps Engineer</p>
+            <p class=" text-slate-800 dark:text-slate-200">Freelance MLOps Engineer</p>
             <p class="dark:text-slate-400 text-slate-600 font-serif italic font-light">Hamburg, Germany</p>
         </div>
     </header>
@@ -137,12 +137,8 @@
                 <h2 class="">About</h2>
                 <div class="">
                     <p>In a world driven by data-driven insights, I specialize in building bridges between cutting-edge data science innovations and tangible real-world outcomes. With a solid foundation in Data Science, Data Engineering, Machine Learning Engineering, and DevOps, I champion the concept of MLOps to ensure that machine learning models not only come to life but thrive in production environments.</p>
-					<p>🚀 Elevating ideas into action: With a deep-seated passion for turning ideas into actionable solutions, I navigate the intricate landscape of MLOps, where Data Science meets DevOps. My journey has been dedicated to orchestrating seamless transitions from model development to deployment, fostering innovation without compromising reliability.</p>
-					<p>💡 Illuminating the path to MLOps: Join me in exploring the realm of MLOps, where we unravel the strategies, tools, and best practices that transform machine learning projects into sustained success stories. From version control and automated testing to monitoring and scaling, I'm committed to shedding light on the path that leads to operational excellence.</p>
-					<p>📊 Data-driven decisions, powered by MLOps: Let's debunk the myth that deploying a model marks the finish line. In fact, it's only the beginning. MLOps ensures models remain relevant, adaptive, and efficient in ever-evolving environments. Together, we'll navigate the challenges and triumphs of maintaining models that drive data-driven decisions across industries.</p>
-					<p>🌐 Connecting the MLOps community: As a passionate advocate for MLOps, I'm dedicated to fostering a vibrant community where ideas flow, experiences are shared, and knowledge is amplified. Through insightful discussions, collaborative projects, and knowledge-sharing, let's propel MLOps to the forefront of data innovation.</p>
 
-                    <p>To reach Sebastian, please use email or linkedin.</p>
+                    <p>To reach me, please use email or linkedin.</p>
                 </div>
             </section>
             <!-- <section>
