--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="apple-touch-icon" sizes="180x180" href="/Sebastian_Humberg_comp.jpg">
-    <link rel="icon" type="image/jpg" sizes="32x32" href="/Sebastian_Humberg_32x32.jpg">
-    <link rel="icon" type="image/jpg" sizes="16x16" href="/Sebastian_Humberg_16x16.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/Sebastian_Humberg_comp.jpg">
+    <link rel="icon" type="image/jpg" sizes="32x32" href="/images/Sebastian_Humberg_32x32.jpg">
+    <link rel="icon" type="image/jpg" sizes="16x16" href="/images/Sebastian_Humberg_16x16.jpg">
     <link rel="manifest" href="/site.webmanifest">
     <!-- <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5"> -->
     <meta name="msapplication-TileColor" content="#da532c">
