update main image

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="text-center">
             <p><img style="height:auto;border-radius: 50% !important;display: block;margin-left: auto;margin-right: auto;width: 30%;"
                     alt="" width="260" height="260" class="avatar avatar-user width-full border color-bg-default"
-                    src="https://avatars.githubusercontent.com/u/8846092?v=4"></img></p>
+                    src="https://avatars.githubusercontent.com/shmbrg"></img></p>
             <h1 class="text-2xl font-bold">Sebastian Humberg</h1>
             <p class=" text-slate-800 dark:text-slate-200">Freelance MLOps Engineer</p>
             <p class="dark:text-slate-400 text-slate-600 font-serif italic font-light">Hamburg, Germany</p>
@@ -138,7 +138,7 @@
                 <div class="">
                     <p>In a world driven by data-driven insights, I specialize in building bridges between cutting-edge data science innovations and tangible real-world outcomes. With a solid foundation in Data Science, Data Engineering, Machine Learning Engineering, and DevOps, I champion the concept of MLOps to ensure that machine learning models not only come to life but thrive in production environments.</p>
 
-                    <p>To reach me, please use email or linkedin.</p>
+                    <p>💡 For collaboration or any other requests please reach out via email or linkedin.</p>
                 </div>
             </section>
             <!-- <section>
